<resources>
    <string name="app_name">Koan</string>
    <string name="title_home">Home</string>
    <string name="title_account">Account</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_bulletin_board">BulletinBoard</string>
    <string name="title_curriculum">Curriculum</string>
    <string name="title_koan">Koan</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="first_lesson">1</string>
    <string name="second_lesson">2</string>
    <string name="third_lesson">3</string>
    <string name="fourth_lesson">4</string>
    <string name="fifth_lesson">5</string>
    <string name="sixth_lesson">6</string>
    <string name="first_lesson_time">8:50~</string>
    <string name="second_lesson_time">10:30~</string>
    <string name="third_lesson_time">13:00~</string>
    <string name="fourth_lesson_time">14:40~</string>
    <string name="fifth_lesson_time">16:20~</string>
    <string name="sixth_lesson_time">18:00~</string>
    <string name="title_activity_login">Sign in</string>
    <string name="logout_conformation_title">Logout</string>
    <string name="logout_confirmation_message">Are you sure to logout?</string>
    <string name="feedback">Feedback</string>
    <string name="curriculum_not_found">There\'s no curriculum available now. Please wait a while</string>
    <string name="link_not_set_yet">リンクを取得しています。</string>


    <!-- Strings related to login -->
    <string name="prompt_ID">Koan ID</string>
    <string name="prompt_ID_error">Koan ID must be 8 characters</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_number_of_characters_error">Password must contain at least 8 characters</string>
    <string name="prompt_password_capital_letter_error">Password must contain at least 1 capital character</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password_or_ID">Login failed. Please check internet connection or ID and Password</string>
    <string name="error_field_required">This field is required</string>
    <string name="open_koan">Open koan in web browser</string>
    <string name="frequently_asked_question">FAQ</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>

    <!--TODO: 英語訳を見直す-->
    <string name="cookie_error">Cookie has not set yet. Auto login is unavailable.</string>
    <string name="realm_error">Failed to load data. Please logout.</string>
    <string name="recover_cookie_error">Failed to get cookies. Please check internet connection or account information.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Koan</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="share_this_app">Share this app</string>

    <!--英語訳する-->
    <string name="lesson_bulletin_bulletin_link">Class Information Board</string>
    <string name="lesson_bulletin_link">Class</string>
    <string name="notification_bulletin_link">Notice Message Board</string>
    <string name="individual_bulletin_link">Personal Message</string>
    <string name="student_affair_office_bulletin_link">Educational Affairs</string>
    <string name="minor_course_bulletin_link">Interdisciplinary Program</string>
    <string name="teaching_profession_bulletin_link">Teaching Profession</string>
    <string name="scholarship_bulletin_link">Scholarship Support</string>
    <string name="career_bulletin_link">Career Support</string>
    <string name="school_life_bulletin_link">Campus Life</string>
    <string name="study_abroad_student_bulletin_link">International Students</string>
    <string name="study_abroad_bulletin_link">Study Abroad</string>
    <string name="other_bulletin_link">Others</string>
    <string name="recover_bulletin_board_link">掲示板にアクセスしたため、掲示のリンクが無効になりました。リンクと件数を再取得します。</string>
    <string name="getting_bulletin_link_num">データ取得中…</string>
    <string name="refresh">Refresh</string>
    <string name="auto_refreshing">現在自動更新中です。</string>
    <string name="email_subject">KoanアプリのFeedback！</string>
    <string name="email_body">Koanアプリのフィードバックです。疑問点やバグ、要望やその他のメッセージを書いてください。もしよければストアで評価してください！</string>
    <string name="email_address">spicyisland1998@gmail.com</string>
    <string name="share_app_body">私はKoanの非公式クライアントアプリを使っています。\n▼ダウンロードはこちら！\n\nhttps://play.google.com/store/apps/details?id=com.mk.spicyisland.koan</string>
    <string name="share_app_subject">Koanアプリをシェア</string>
    <string name="koan_logo">Koan Logo</string>
</resources>