<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_curriculum"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_curriculum" />
        <item
            android:id="@+id/nav_bulletin_board"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_bulletin_board" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/title_account" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share" />
    </group>

</menu>
