<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="receivedStuffs"
            type="com.mk.spicyisland.koan.models.ReceivedStuffs" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="13">

        <androidx.cardview.widget.CardView
            android:id="@+id/lesson_bulletin_bulletin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            app:cardCornerRadius="5dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:drawableStart="@drawable/bulletin_tag"
                android:text="@string/lesson_bulletin_bulletin_link" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/lesson_bulletin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            app:cardCornerRadius="5dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:drawableStart="@drawable/bulletin_tag"
                android:text="@string/lesson_bulletin_link" />

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/notification_bulletin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            app:cardCornerRadius="5dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:drawableStart="@drawable/bulletin_tag"
                android:text="@string/notification_bulletin_link" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/individual_bulletin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            app:cardCornerRadius="5dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:drawableStart="@drawable/bulletin_tag"
                android:text="@string/individual_bulletin_link" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/student_affairs_office_bulletin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            app:cardCornerRadius="5dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:drawableStart="@drawable/bulletin_tag"
                android:text="@string/student_affair_office_bulletin_link" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/minor_course_bulletin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            app:cardCornerRadius="5dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:drawableStart="@drawable/bulletin_tag"
                android:text="@string/minor_course_bulletin_link" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/teaching_profession_bulletin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            app:cardCornerRadius="5dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:drawableStart="@drawable/bulletin_tag"
                android:text="@string/teaching_profession_bulletin_link" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/scholarship_bulletin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            app:cardCornerRadius="5dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:drawableStart="@drawable/bulletin_tag"
                android:text="@string/scholarship_bulletin_link" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/career_bulletin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            app:cardCornerRadius="5dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:drawableStart="@drawable/bulletin_tag"
                android:text="@string/career_bulletin_link" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/school_life_bulletin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            app:cardCornerRadius="5dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:drawableStart="@drawable/bulletin_tag"
                android:text="@string/school_life_bulletin_link" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/study_abroad_student_bulletin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            app:cardCornerRadius="5dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:drawableStart="@drawable/bulletin_tag"
                android:text="@string/study_abroad_student_bulletin_link" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/study_abroad_bulletin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            app:cardCornerRadius="5dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:drawableStart="@drawable/bulletin_tag"
                android:text="@string/study_abroad_bulletin_link" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/other_bulletin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            app:cardCornerRadius="5dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:drawableStart="@drawable/bulletin_tag"
                android:text="@string/other_bulletin_link" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</layout>
